--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 			<span class="comments">// AS time goes on.</span><br />
 			He cannot be separated from her;<br />
 			<span class="comments">// At the same time.</span><br />
-			He thought that she can't be separated from me either;<br />
+			He thought that she can't be separated from him either;<br />
 			<span class="comments">// Both wind and snow all over the sky.</span><br />
 			<span class="comments">// Whether on foot or 5 kilometers.</span><br />
-			<span class="keyword">He was </span> very <span class="keyword">happy to find my first love</span>;<br />
+			<span class="keyword">He was </span> very <span class="keyword">happy to find his first love</span>;<br />
 			<span class="keyword">She was</span>also very <span class="keyword">happy</span>;<br />
 			<span class="placeholder"/><span class="comments">// Whether it is right now</span><br />
-			<span class="placeholder"/><span class="comments">// Still in the distant future.</span><br />
+			<span class="placeholder"/><span class="comments">// Or in the distant future.</span><br />
 			<span class="placeholder"/>He had but one dream;<br />
 			<span class="comments">// He wanted to keep her happy forever but he messed up.</span><br />
 			<br>
